<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="save">save</string>
    <string name="total_amount">Total Amount</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_15">15</string>
    <string name="_18">18</string>
    <string name="_20">20</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
