<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.TipCalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/tip_calculator">

        </TextView>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/bill_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bill_amount"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:importantForAutofill="no">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/tip_percentage"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            tools:ignore="LabelFor">
        </EditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:checkedButton="@id/btn15"
        android:layout_marginTop="20dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn10"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn12"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn15"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn18"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/_18"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn20"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            android:layout_marginTop="40dp">

        </TextView>

        <TextView
            android:id="@+id/tip_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:textSize="25sp"
            android:layout_marginTop="40dp">

        </TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            >

        </TextView>

        <TextView
            android:id="@+id/total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="25sp">

        </TextView>



    </LinearLayout>


</LinearLayout>